# CUDA-RL

./: .gitignore  README.txt
CUDAMancala/: CMakeLists.txt  rlagent.cu  rlagent.cuh  rlagent.hpp  train.cu
CUDAMancala/Protobuf/: TabularRLData.pb.cc  TabularRLData.pb.h
MancalaPy/: MancalaAgent.py  MancalaEnv.py  MancalaRL.py  MancalaUI.py
MancalaPy/protobuf/: TabularRLData_pb2.py
ProtobufDefs/: TabularRLData.proto
